--- a/src/app/pages/clubs/clubs.component.html
+++ b/src/app/pages/clubs/clubs.component.html
@@ -1,3 +1,1 @@
-<p>
-  clubs works!
-</p>
+Zakladajúcimi členmi Slovenskej Muay Thai Asociácie sú kluby Dracula Gym BB, Diamond Gym ZA, Hanuman Gym BA, MTC BA, Cerberos Gym NMnV a Victory Gym TN. Prezidentom SMTA je najúspešnejší slovenský thaiboxer, Vlado Moravčík. Viceprezidentom je Robo Kajánek zo Žiliny.
