--- a/src/app/pages/league/league.component.html
+++ b/src/app/pages/league/league.component.html
@@ -1,3 +1,3 @@
-<p>
-  league works!
-</p>
+Slovenská Muay Thai Asociácia od Októbra spúšťa nový koncept amatérskej ligy pre začínajúcich zápasníkov pod názvom Slovenská Muay Thai liga. Prvé kolo je naplánoné na druhú polku Oktobra v Novom Meste Nad Váhom (Organizátor Cerberos Gym NMnV), druhé kolo v Novembri v Žiline (Organizátor Diamond Gym ZA) a posledné kolo v roku 2017 v decembri v meste Trenčín (Organizátor Victory Gym TN). Celý kalendár všetkých kôl na sezónu 2017/2018 bude čoskoro zverejnený na stránkach S.M.T.A..
+Slovenská Muay Thai liga bude fungovať na podobnom štýle ako Česká Muay Thai liga, kde sa zápasové dvojce budú zostavovať pár dní pred uskutočnením ligy. Tím by sa malo predísť zbytočnému cestovaniu zápasníkov, ktorý nemajú na danom kole súpera.
+Všetky titulové zápasy o Amatérskeho šampióna Slovenskej Muay Thai ligy sa budú konať na konci celej sezóny na jednom podujatí.
