--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,24 @@
-<div id="logos">
+<div class="row">
+<div class="row col-md-4 col-lg-4 flex-items-md-around flex-items-md-middle">
   <img src="../assets/images/smta.png" />
+</div>
+<div class="row col-md-4 col-lg-4 flex-items-md-around flex-items-md-middle">
+  <img src="../assets/images/ifma-logo.png" />
+</div>
+<div class="row col-md-4 col-lg-4 flex-items-md-around flex-items-md-middle">
+  <img src="../assets/images/unite-logo.png" />
+</div>
+<!--<div class="row col-md-3 col-lg-3 flex-items-md-around flex-items-md-middle">-->
+  <!--<img src="../assets/images/sportaccord-logo.png" />-->
+<!--</div>-->
 </div>
 <header>
   <div class="header-nav">
-    <a routerLink="/" routerLinkActiveOptions="{ exact: true }" class="nav-link nav-text">Úvod</a>
-    <a routerLink="/o-smta" routerLinkActiveOptions="{ exact: true }" class="nav-link nav-text">O SMTA</a>
-    <a routerLink="/liga" class="nav-link nav-text">Liga</a>
-    <a routerLink="/kluby" class="nav-link nav-text">Kluby</a>
-    <a routerLink="/dokumenty" class="nav-link nav-text">Dokumenty</a>
-    <a routerLink="/kontakty" class="nav-link nav-text">Kontakt</a>
+    <!--<a routerLink="/" class="nav-link nav-text">Úvod</a>-->
+    <a routerLink="/o-smta" routerLinkActive="active" routerLinkActiveOptions="{ exact: true }" class="nav-link nav-text">O SMTA</a>
+    <a routerLink="/liga" routerLinkActive="active" routerLinkActiveOptions="{ exact: true }" class="nav-link nav-text">Liga</a>
+    <a routerLink="/kluby" routerLinkActive="active" routerLinkActiveOptions="{ exact: true }" class="nav-link nav-text">Kluby</a>
+    <a routerLink="/kontakty" routerLinkActive="active" routerLinkActiveOptions="{ exact: true }" class="nav-link nav-text">Kontakt</a>
   </div>
 </header>
 <div id="content">
