--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,19 +1,85 @@
-S.M.T.A. začala celý byrokratický proces na pôde Ministerstva Školstva a International Federation of Muaythai Amateur - IFMA už mnoho mesiacov dozadu. Vďaka usilovnej práci sa Slovenská Muay Thai Asociácia stala jediným Národným Športovým zväzom pre Muay Thai na Slovensku priamo uznaná aj Slovenským Olympijským Výborom a v auguste na ročnom valnom zhromaždení má byť prijatá za riadneho člena International Federation of Muaythai Amateur - IFMA!
-Tieto dve veci predstavujú pre Slovenský Muay thai obrovský historický miľník. Slovensko po niekoľkych rokoch môže vyslať svojich zápasníkov na medzinárodné šampiónaty pod hlavičkou IFMA. Tými sú Svetového Poháre, Majstrovstvá Európy, Majstrovstvá Sveta alebo Svetové Hry. Netreba ale zabúdať, že IFMA získala štatút Recognised od Medzinárodného Olympijského Výboru! To znamená, že Muay Thai je na najlepšej ceste sa v priebehu ďalších rokov stať aj Olympijským športom!
+<div class="row">
+  <div class="col-md-12 col-lg-12">
+    <h3>Slovenská Muay Thai Asociácia</h3>
+    <p class="p1">
+      S.M.T.A. začala celý byrokratický proces na pôde Ministerstva Školstva a International Federation of Muaythai Amateur
+      - IFMA už mnoho mesiacov dozadu.
+    </p>
+    <p class="p1">
+      Vďaka usilovnej práci sa Slovenská Muay Thai Asociácia stala jediným Národným Športovým zväzom pre Muay Thai na
+      Slovensku priamo uznaná aj Slovenským Olympijským Výborom a v auguste na ročnom valnom zhromaždení bola prijatá za
+      riadneho člena International Federation of Muaythai Amateur - IFMA!
+    </p>
+    <p class="p1">
+      Tieto dve veci predstavujú pre Slovenský Muay thai obrovský historický miľník. Slovensko po niekoľkych rokoch môže
+      vyslať svojich zápasníkov na medzinárodné šampiónaty pod hlavičkou IFMA. Tými sú Svetového Poháre, Majstrovstvá
+      Európy, Majstrovstvá Sveta alebo Svetové Hry.
+    </p>
+    <p class="p1">
+      Netreba ale zabúdať, že IFMA získala štatút Recognised od Medzinárodného Olympijského Výboru! To znamená, že Muay Thai
+      je na najlepšej ceste sa v priebehu ďalších rokov stať aj Olympijským športom!
+    </p>
+    <h3>S.M.T.A. A ZÁKON O ŠPORTE</h3>
+    <p class="p1">
+      Slovenská Muay Thai Asociácia je jediným Národným Športovým zväzom pre Muay Thai na Slovensku uznaná SOV, čo je veľmi
+      dôležitý štatút pre jej fungovanie. Vďaka tomu môže S.M.T.A. na svoje fungovanie poberať finančné prostriedky z rozpočtu SR.
+      Možno ešte dôležitejšia informácia pre jej súčasných či budúcich členov je, že vďaka tomu sa úspešných reprezentantov
+      S.M.T.A. týkajú finančné odmeny pre tzv. TOP TÍM Slovenska.
+    </p>
+    <p class="p1">
+      To znamená, že medailisti z Neolympijských športov z Majstrovstiev Sveta získavajú následovné finančné prostriedky na
+      svoju prípravu na ďaľši rok:
+    </p>
+    <ul class="list">
+      <li>Zlatá medaila - 10 000€</li>
+      <li>Strieborná medaila - 7 000€</li>
+      <li>Bronzová medaila - 5 000€</li>
+    </ul>
+    <p class="p1">
+      Čo sa týka zisku medaily na Svetových Hrách, tak podľa prvých nepotvrdených informácií by tá čiastka mala byť rovnaká
+      ako za medailu na MS, ale daný športovec tú sumu bude dostávať každý rok po nasledujúce štyri roky!<br/>
+      V olympijských športoch sú tie čiastky mnohonásobne vyššie:
+    </p>
 
-S.M.T.A. A ZÁKON O ŠPORTE
+    <table class="table table-noborder">
+      <thead>
+      <tr>
+        <th class="left">Zisk medaily</th>
+        <th>Majstrovstvá Sveta</th>
+        <th>Majstrovstvá Európy</th>
+        <th>Olymmpijské hry</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td class="left">Zlatá medaila</td>
+        <td>40 000€</td>
+        <td>30 000€</td>
+        <td>50 000€</td>
+      </tr>
+      <tr>
+        <td class="left">Strieborná medaila</td>
+        <td>30 000€</td>
+        <td>20 000€</td>
+        <td>40 000€</td>
+      </tr>
+      <tr>
+        <td class="left">Bronzová medaila</td>
+        <td>30 000€</td>
+        <td>20 000€</td>
+        <td>40 000€</td>
+      </tr>
+      </tbody>
+    </table>
+    <p class="p1">
+      Takže pre úspešných Slovenských reprezentantov v Muay Thai tu vznikajú vďaka S.M.T.A. výborné podmienky, aby sa mohli
+      na plno sústrediť len na svoju vlastnú športovú prípravu!
+    </p>
+  </div>
+</div>
 
-Slovenská Muay Thai Asociácia je jediným Národným Športovým zväzom pre Muay Thai na Slovensku uznaná SOV, čo je veľmi dôležitý štatút pre jej fungovanie. Vďaka tomu môže S.M.T.A. na svoje fungovanie poberať finančné prostriedky z rozpočtu SR. Možno ešte dôležitejšia informácia pre jej súčasných či budúcich členov je, že vďaka tomu sa úspešných reprezentantov S.M.T.A. týkajú finančné odmeny pre tzv. TOP TÍM Slovenska.
-To znamená, že medailisti z Neolympijských športov z Majstrovstiev Sveta získavajú následovné finančné prostriedky na svoju prípravu na ďaľši rok:
-Zlatá medaila - 10 000€, Strieborná medaila - 7 000€, Bronzová medaila - 5 000€.
-Čo sa týka zisku medaily na Svetových Hrách, tak podľa prvých nepotvrdených informácií by tá čiastka mala byť rovnaká ako za medailu na MS, ale daný športovec tú sumu bude dostávať každý rok po nasledujúce štyri roky!
 
-V olympijských športoch sú tie čiastky mnohonásobne vyššie:
-Zisk medaile na Majstrovstvách Sveta:
-Zlatá medaila - 40 000€, Strieborná medaila - 30 000€, Bronzová medaila - 30 000€.
-Zisk medaile na Majstrovstvách Európy:
-Zlatá medaila - 30 000€, Strieborná medaila - 20 000€, Bronzová medaila - 20 000€.
-Zisk medaile na OH:
-Zlatá medaila - 50 000€, Strieborná medaila - 40 000€, Bronzová medaila - 40 000€.
 
-Takže pre úspešných Slovenských reprezentantov v Muay Thai tu vznikajú vďaka S.M.T.A. výborné podmienky, aby sa mohli na plno sústrediť len na svoju vlastnú športovú prípravu!
+
+
+
