--- a/src/app/pages/clubs/clubs.component.html
+++ b/src/app/pages/clubs/clubs.component.html
@@ -1,1 +1,197 @@
-Zakladajúcimi členmi Slovenskej Muay Thai Asociácie sú kluby Dracula Gym BB, Diamond Gym ZA, Hanuman Gym BA, MTC BA, Cerberos Gym NMnV a Victory Gym TN. Prezidentom SMTA je najúspešnejší slovenský thaiboxer, Vlado Moravčík. Viceprezidentom je Robo Kajánek zo Žiliny.
+<div class="row">
+  <div class="col-md-12 col-lg-12">
+    <h3>Zakladajúce kluby Slovenskej Muay Thai Asociácie</h3>
+    <p></p>
+    <div class="row">
+      <div class="row col-md-2 col-lg-2 flex-items-md-center flex-items-md-middle">
+        <img src="../../../assets/images/cerberos-logo.png" class="club-logo"/>
+      </div>
+      <div class="col-md-4 col-lg-4">
+        <h4>Cerberos Gym</h4>
+        <table class="table table-compact table-noborder">
+          <tbody>
+          <tr>
+            <td class="left">Adresa:</td>
+            <td class="left">Štúrova 590/31</td>
+          </tr>
+          <tr>
+            <td class="left"></td>
+            <td class="left">Nové Mesto nad Váhom</td>
+          </tr>
+          <tr>
+            <td class="left">Kontakty:</td>
+            <td class="left"><a href="mailto:cerberosgym@gmail.com">cerberosgym@gmail.com</a></td>
+          </tr>
+          <tr>
+            <td class="left"> </td>
+            <td class="left"><a href="https://www.facebook.com/CerberosGym/" target="_blank">Facebook</a></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="row col-md-2 col-lg-2 flex-items-md-center flex-items-md-middle">
+        <img src="../../../assets/images/diamond-logo.png" class="club-logo"/>
+      </div>
+      <div class="col-md-4 col-lg-4">
+        <h4>Diamond Gym</h4>
+        <table class="table table-compact table-noborder">
+          <tbody>
+          <tr>
+            <td class="left">Adresa:</td>
+            <td class="left">Alexandra Rudnaya 21</td>
+          </tr>
+          <tr>
+            <td class="left"></td>
+            <td class="left">Žilina</td>
+          </tr>
+          <tr>
+            <td class="left">Kontakty:</td>
+            <td class="left"><a href="mailto:info@diamondgym.sk">info@diamondgym.sk</a></td>
+          </tr>
+          <tr>
+            <td class="left"> </td>
+            <td class="left"><a href="https://www.facebook.com/diamondgymzilina/" target="_blank">Facebook</a></td>
+          </tr>
+          <tr>
+            <td class="left"> </td>
+            <td class="left"><a href="http://www.diamondgym.sk" target="_blank">http://www.diamondgym.sk</a></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <p></p>
+    <div class="row">
+      <div class="row col-md-2 col-lg-2 flex-items-md-center flex-items-md-middle">
+        <img src="../../../assets/images/dracula-logo.png" class="club-logo"/>
+      </div>
+      <div class="col-md-4 col-lg-4">
+        <h4>Dracula Gym</h4>
+        <table class="table table-compact table-noborder">
+          <tbody>
+          <tr>
+            <td class="left">Adresa:</td>
+            <td class="left">Rudohorská 31</td>
+          </tr>
+          <tr>
+            <td class="left"></td>
+            <td class="left">Banská Bystrica</td>
+          </tr>
+          <tr>
+            <td class="left">Kontakty:</td>
+            <td class="left"><a href="mailto:info@draculagym.sk">info@draculagym.sk</a></td>
+          </tr>
+          <tr>
+            <td class="left"> </td>
+            <td class="left"><a href="https://www.facebook.com/draculagymslovakia/" target="_blank">Facebook</a></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="row col-md-2 col-lg-2 flex-items-md-center flex-items-md-middle">
+        <img src="../../../assets/images/hanuman-logo.png" class="club-logo"/>
+      </div>
+      <div class="col-md-4 col-lg-4">
+        <h4>Hanuman Gym</h4>
+        <table class="table table-compact table-noborder">
+          <tbody>
+          <tr>
+            <td class="left">Adresa:</td>
+            <td class="left">Dom Kultúry Ovsište</td>
+          </tr>
+          <tr>
+            <td class="left"></td>
+            <td class="left">Ovsištské námestie 1</td>
+          </tr>
+          <tr>
+            <td class="left"></td>
+            <td class="left">Bratislava</td>
+          </tr>
+          <tr>
+            <td class="left">Kontakty:</td>
+            <td class="left"><a href="mailto:hanuman.st@gmail.com">hanuman.st@gmail.com</a></td>
+          </tr>
+          <tr>
+            <td class="left"> </td>
+            <td class="left"><a href="https://www.facebook.com/Hanuman-gym-Bratislava-1427237597501428/" target="_blank">Facebook</a></td>
+          </tr>
+          <tr>
+            <td class="left"> </td>
+            <td class="left"><a href="http://www.hanumangym.sk/" target="_blank">http://www.hanumangym.sk/</a></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <p></p>
+    <div class="row">
+      <div class="row col-md-2 col-lg-2 flex-items-md-center flex-items-md-middle">
+        <img src="../../../assets/images/mtc-logo.png" class="club-logo"/>
+      </div>
+      <div class="col-md-4 col-lg-4">
+        <h4>Muay Thai Centrum</h4>
+        <table class="table table-compact table-noborder">
+          <tbody>
+          <tr>
+            <td class="left">Adresa:</td>
+            <td class="left">STU FEI Bratislava</td>
+          </tr>
+          <tr>
+            <td class="left"></td>
+            <td class="left">Ilkovičova 3</td>
+          </tr>
+          <tr>
+            <td class="left"></td>
+            <td class="left">Bratislava</td>
+          </tr>
+          <tr>
+            <td class="left">Kontakty:</td>
+            <td class="left"><a href="mailto:kohutikmarian@gmail.com">kohutikmarian@gmail.com</a></td>
+          </tr>
+          <tr>
+            <td class="left"> </td>
+            <td class="left"><a href="https://www.facebook.com/M.T.C.Bratislava/" target="_blank">Facebook</a></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="row col-md-2 col-lg-2 flex-items-md-center flex-items-md-middle">
+        <img src="../../../assets/images/victory-logo.png" class="club-logo"/>
+      </div>
+      <div class="col-md-4 col-lg-4">
+        <h4>Victory Gym</h4>
+        <table class="table table-compact table-noborder">
+          <tbody>
+          <tr>
+            <td class="left">Adresa:</td>
+            <td class="left">Generála Milana Rastilava Štefánika 379/19</td>
+          </tr>
+          <tr>
+            <td class="left"></td>
+            <td class="left">Trenčín</td>
+          </tr>
+          <tr>
+            <td class="left">Kontakty:</td>
+            <td class="left"><a href="mailto:tadlanek.tomas@gmail.com">tadlanek.tomas@gmail.com</a></td>
+          </tr>
+          <tr>
+            <td class="left"> </td>
+            <td class="left"><a href="https://www.facebook.com/victorygymtrencin/" target="_blank">Facebook</a></td>
+          </tr>
+          <tr>
+            <td class="left"> </td>
+            <td class="left"><a href="http://www.victorygym.sk/" target="_blank">http://www.victorygym.sk/</a></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
