--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -1,3 +1,45 @@
-<p>
-  contacts works!
-</p>
+<div class="row">
+  <div class="col-md-9 col-lg-9">
+    <h3>Kontakty</h3>
+    <table class="table table-noborder">
+      <tbody>
+      <tr>
+        <td class="left">Adresa</td>
+        <td class="left">Slovenská Muay – Thai asociácia</td>
+      </tr>
+      <tr>
+        <td class="left"></td>
+        <td class="left">Rudohorská 31</td>
+      </tr>
+      <tr>
+        <td class="left"></td>
+        <td class="left">Banská Bystrica </td>
+      </tr>
+      <tr>
+        <td class="left"></td>
+        <td class="left">974 11</td>
+      </tr>
+      <tr>
+        <td class="left"></td>
+        <td class="left"></td>
+      </tr>
+      <tr>
+        <td class="left">Kontakty</td>
+        <td class="left"><a href="mailto:secretary@smta.sk">secretary@smta.sk</a></td>
+      </tr>
+      <tr>
+        <td class="left"></td>
+        <td class="left">+421 903 584 555</td>
+      </tr>
+      <tr>
+        <td class="left"></td>
+        <td class="left"><a href="https://www.facebook.com/SMTAmuaythai/" target="_blank">Facebook</a></td>
+      </tr>
+      <tr>
+        <td class="left">Amatérska liga</td>
+        <td class="left"><a href="mailto:liga@smta.sk">liga@smta.sk</a></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
