--- a/src/app/pages/league/league.component.html
+++ b/src/app/pages/league/league.component.html
@@ -1,3 +1,85 @@
-Slovenská Muay Thai Asociácia od Októbra spúšťa nový koncept amatérskej ligy pre začínajúcich zápasníkov pod názvom Slovenská Muay Thai liga. Prvé kolo je naplánoné na druhú polku Oktobra v Novom Meste Nad Váhom (Organizátor Cerberos Gym NMnV), druhé kolo v Novembri v Žiline (Organizátor Diamond Gym ZA) a posledné kolo v roku 2017 v decembri v meste Trenčín (Organizátor Victory Gym TN). Celý kalendár všetkých kôl na sezónu 2017/2018 bude čoskoro zverejnený na stránkach S.M.T.A..
-Slovenská Muay Thai liga bude fungovať na podobnom štýle ako Česká Muay Thai liga, kde sa zápasové dvojce budú zostavovať pár dní pred uskutočnením ligy. Tím by sa malo predísť zbytočnému cestovaniu zápasníkov, ktorý nemajú na danom kole súpera.
-Všetky titulové zápasy o Amatérskeho šampióna Slovenskej Muay Thai ligy sa budú konať na konci celej sezóny na jednom podujatí.
+<div class="row">
+  <div class="col-md-9 col-lg-9">
+    <h3>Amatérska liga SMTA</h3>
+    <p class="p1">
+      Slovenská Muay Thai Asociácia od Októbra spúšťa nový koncept amatérskej ligy pre začínajúcich zápasníkov pod názvom
+      Slovenská Muay Thai liga.
+    </p>
+    <p class="p2">Predbežný kalendár:</p>
+    <table class="table table-noborder">
+      <thead>
+      <tr>
+        <th class="left">Kolo</th>
+        <th>Plánovaná doba konania</th>
+        <th>Miesto konania</th>
+        <th>Organizátor</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td class="left">1.</td>
+        <td>druhá polovica Októbra 2017</td>
+        <td>Nové Mesto nad Váhom</td>
+        <td>Cerberos Gym</td>
+      </tr>
+      <tr>
+        <td class="left">2.</td>
+        <td>November 2017</td>
+        <td>Žilina</td>
+        <td>Diamond Gym</td>
+      </tr>
+      <tr>
+        <td class="left">3.</td>
+        <td>December 2017</td>
+        <td>Trenčín</td>
+        <td>Victory Gym</td>
+      </tr>
+      </tbody>
+    </table>
+    <p class="p1">
+      Kalendár bude doplnený o presné dátumy čoskoro.
+    </p>
+    <p class="p1">
+      Slovenská Muay Thai liga bude fungovať na podobnom štýle ako Česká Muay Thai liga, kde sa zápasové dvojce budú
+      zostavovať pár dní pred uskutočnením ligy. Tím by sa malo predísť zbytočnému cestovaniu zápasníkov, ktorý nemajú na danom kole súpera.
+    </p>
+    <p class="p1">
+      Všetky titulové zápasy o Amatérskeho šampióna Slovenskej Muay Thai ligy sa budú konať na konci celej sezóny na jednom podujatí.
+    </p>
+  </div>
+  <div class="col-md-3 col-lg-3">
+    <div class="card">
+      <div class="card-header">
+        Dokumenty
+      </div>
+      <div class="card-block">
+        <div class="card-text">
+          <h4>Potvrdenie od lekára</h4>
+          <p class="p1">Akékoľvek tlačivo potvrdené vašim lekárom, že ste spôsobilý účastniť sa Amatérskej ligy.</p>
+          <h4>Súhlas zákonného zástupcu</h4>
+          <div class="row col-md-12 col-lg-12 flex-items-md-around flex-items-md-middle">
+            <a href="../../../assets/documents/suhlas-zastupcu-2017.docx" target="_blank"><img src="../../../assets/images/word-icon.png" /></a>
+            <a href="../../../assets/documents/suhlas-zastupcu-2017.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+          </div>
+          <p class="p1">Pre zápasníkov do 18 rokov.</p>
+          <h4>Pravidlá účasti</h4>
+          <div class="row col-md-12 col-lg-12 flex-items-md-around flex-items-md-middle">
+            <a href="../../../assets/documents/msr-amaterov-pravidla-ucasti.doc" target="_blank"><img src="../../../assets/images/word-icon.png" /></a>
+            <a href="../../../assets/documents/msr-amaterov-pravidla-ucasti.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        Kontakt
+      </div>
+      <div class="card-block">
+        <div class="card-text">
+          Pre komunikáciu ohľadne ligy, používajte adresu: <a href="mailto:liga@smta.sk">liga@smta.sk</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
