Change league dates

--- a/src/app/pages/league/league.component.html
+++ b/src/app/pages/league/league.component.html
@@ -18,27 +18,24 @@
       <tbody>
       <tr>
         <td class="left">1.</td>
-        <td>druhá polovica Októbra 2017</td>
+        <td>8. Októbra 2017</td>
         <td>Nové Mesto nad Váhom</td>
         <td>Cerberos Gym</td>
       </tr>
       <tr>
         <td class="left">2.</td>
-        <td>November 2017</td>
-        <td>Žilina</td>
-        <td>Diamond Gym</td>
-      </tr>
-      <tr>
-        <td class="left">3.</td>
-        <td>December 2017</td>
+        <td>18. Novembra 2017</td>
         <td>Trenčín</td>
         <td>Victory Gym</td>
       </tr>
+      <tr>
+        <td class="left">3.</td>
+        <td>9. Decembera 2017</td>
+        <td>Žilina</td>
+        <td>Diamond Gym</td>
+      </tr>
       </tbody>
     </table>
-    <p class="p1">
-      Kalendár bude doplnený o presné dátumy čoskoro.
-    </p>
     <p class="p1">
       Slovenská Muay Thai liga bude fungovať na podobnom štýle ako Česká Muay Thai liga, kde sa zápasové dvojce budú
       zostavovať pár dní pred uskutočnením ligy. Tím by sa malo predísť zbytočnému cestovaniu zápasníkov, ktorý nemajú na danom kole súpera.
