--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="row">
-<div class="row col-md-4 col-lg-4 flex-items-md-around flex-items-md-middle">
-  <img src="../assets/images/smta.png" />
-</div>
-<div class="row col-md-4 col-lg-4 flex-items-md-around flex-items-md-middle">
-  <img src="../assets/images/ifma-logo.png" />
-</div>
-<div class="row col-md-4 col-lg-4 flex-items-md-around flex-items-md-middle">
-  <img src="../assets/images/unite-logo.png" />
-</div>
+  <div class="row col-sm-4 col-xs-4 col-md-4 col-lg-4 flex-items-md-around flex-items-md-middle">
+    <img src="../assets/images/smta.png" />
+  </div>
+  <div class="row col-sm-4 col-xs-4 col-md-4 col-lg-4 flex-items-md-around flex-items-md-middle">
+    <img src="../assets/images/ifma-logo.png" />
+  </div>
+  <div class="row col-sm-4 col-xs-4 col-md-4 col-lg-4 flex-items-md-around flex-items-md-middle">
+    <img src="../assets/images/unite-logo.png" />
+  </div>
 <!--<div class="row col-md-3 col-lg-3 flex-items-md-around flex-items-md-middle">-->
   <!--<img src="../assets/images/sportaccord-logo.png" />-->
 <!--</div>-->
