--- a/src/app/pages/league/league.component.html
+++ b/src/app/pages/league/league.component.html
@@ -54,14 +54,17 @@
           <h4>Potvrdenie od lekára</h4>
           <p class="p1">Akékoľvek tlačivo potvrdené vašim lekárom, že ste spôsobilý účastniť sa Amatérskej ligy.</p>
           <h4>Súhlas zákonného zástupcu</h4>
-          <div class="row col-md-12 col-lg-12 flex-items-md-around flex-items-md-middle">
-            <a href="../../../assets/documents/suhlas-zastupcu-2017.docx" target="_blank"><img src="../../../assets/images/word-icon.png" /></a>
+          <div class="row">
+          <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
             <a href="../../../assets/documents/suhlas-zastupcu-2017.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+          </div>
+          <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
+            <a href="../../../assets/documents/suhlas-zastupcu-2017.docx" target="_blank"><img src="../../../assets/images/word-icon.png" /></a>
+          </div>
           </div>
           <p class="p1">Pre zápasníkov do 18 rokov.</p>
           <h4>Pravidlá účasti</h4>
-          <div class="row col-md-12 col-lg-12 flex-items-md-around flex-items-md-middle">
-            <a href="../../../assets/documents/msr-amaterov-pravidla-ucasti.doc" target="_blank"><img src="../../../assets/images/word-icon.png" /></a>
+          <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
             <a href="../../../assets/documents/msr-amaterov-pravidla-ucasti.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
           </div>
         </div>
