--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -19,6 +19,9 @@
       Netreba ale zabúdať, že IFMA získala štatút Recognised od Medzinárodného Olympijského Výboru! To znamená, že Muay Thai
       je na najlepšej ceste sa v priebehu ďalších rokov stať aj Olympijským športom!
     </p>
+    <p class="p1">
+      <a href="../../../assets/documents/stanovy.pdf" target="_blank">Platné stanovy</a> Slovenskej Muay-Thai Asociácie.
+    </p>
     <h3>S.M.T.A. A ZÁKON O ŠPORTE</h3>
     <p class="p1">
       Slovenská Muay Thai Asociácia je jediným Národným Športovým zväzom pre Muay Thai na Slovensku uznaná SOV, čo je veľmi
@@ -75,6 +78,21 @@
       Takže pre úspešných Slovenských reprezentantov v Muay Thai tu vznikajú vďaka S.M.T.A. výborné podmienky, aby sa mohli
       na plno sústrediť len na svoju vlastnú športovú prípravu!
     </p>
+  </div>
+  <div class="col-md-4 col-lg-4">
+    <div class="card">
+      <div class="card-header">
+        Dokumenty
+      </div>
+      <div class="card-block">
+        <div class="card-text">
+          <h4>Stanovy</h4>
+          <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
+            <a href="../../../assets/documents/stanovy.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
