--- a/src/app/pages/league/league.component.html
+++ b/src/app/pages/league/league.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-9 col-lg-9">
+  <div class="col-md-8 col-lg-8">
     <h3>Amatérska liga SMTA</h3>
     <p class="p1">
       Slovenská Muay Thai Asociácia od Októbra spúšťa nový koncept amatérskej ligy pre začínajúcich zápasníkov pod názvom
@@ -30,9 +30,15 @@
       </tr>
       <tr>
         <td class="left">3.</td>
-        <td>9. Decembera 2017</td>
+        <td>16. Decembera 2017</td>
         <td>Žilina</td>
         <td>Diamond Gym</td>
+      </tr>
+      <tr>
+        <td class="left">4.</td>
+        <td>3. Februára 2018</td>
+        <td>Banská Bystrica</td>
+        <td>Dracula Gym</td>
       </tr>
       </tbody>
     </table>
@@ -44,7 +50,7 @@
       Všetky titulové zápasy o Amatérskeho šampióna Slovenskej Muay Thai ligy sa budú konať na konci celej sezóny na jednom podujatí.
     </p>
   </div>
-  <div class="col-md-3 col-lg-3">
+  <div class="col-md-4 col-lg-4">
     <div class="card">
       <div class="card-header">
         Dokumenty
@@ -55,17 +61,21 @@
           <p class="p1">Akékoľvek tlačivo potvrdené vašim lekárom, že ste spôsobilý účastniť sa Amatérskej ligy.</p>
           <h4>Súhlas zákonného zástupcu</h4>
           <div class="row">
-          <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
-            <a href="../../../assets/documents/suhlas-zastupcu-2017.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+            <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
+              <a href="../../../assets/documents/suhlas-zastupcu-2017.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+            </div>
+            <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
+              <a href="../../../assets/documents/suhlas-zastupcu-2017.docx" target="_blank"><img src="../../../assets/images/word-icon.png" /></a>
+            </div>
           </div>
+          <h4>Plná moc zákonného zástupcu</h4>
           <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
-            <a href="../../../assets/documents/suhlas-zastupcu-2017.docx" target="_blank"><img src="../../../assets/images/word-icon.png" /></a>
-          </div>
+            <a href="../../../assets/documents/plna-moc-zakonneho-zastupcu-2017.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
           </div>
           <p class="p1">Pre zápasníkov do 18 rokov.</p>
           <h4>Pravidlá účasti</h4>
           <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
-            <a href="../../../assets/documents/msr-amaterov-pravidla-ucasti.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+            <a href="../../../assets/documents/msr-amaterov-pravidla-ucasti_20171109.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
           </div>
         </div>
       </div>
