--- a/src/app/pages/league/league.component.html
+++ b/src/app/pages/league/league.component.html
@@ -40,6 +40,18 @@
         <td>Banská Bystrica</td>
         <td>Dracula Gym</td>
       </tr>
+      <tr>
+        <td class="left">5.</td>
+        <td>3. Marca 2018</td>
+        <td>Žilina</td>
+        <td>Diamond Gym</td>
+      </tr>
+      <tr>
+        <td class="left">6.</td>
+        <td>22. Apríla 2017</td>
+        <td>Nové Mesto nad Váhom</td>
+        <td>Cerberos Gym</td>
+      </tr>
       </tbody>
     </table>
     <p class="p1">
@@ -75,7 +87,7 @@
           <p class="p1">Pre zápasníkov do 18 rokov.</p>
           <h4>Pravidlá účasti</h4>
           <div class="row col-md-6 col-lg-6 flex-items-md-around flex-items-md-middle">
-            <a href="../../../assets/documents/msr-amaterov-pravidla-ucasti_20171109.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+            <a href="../../../assets/documents/msr-amaterov-pravidla-ucasti_20180425.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
           </div>
         </div>
       </div>
