--- a/src/app/pages/league/season1/season1.component.html
+++ b/src/app/pages/league/season1/season1.component.html
@@ -1,5 +1,207 @@
 <div class="row">
   <div class="col-md-8 col-lg-8">
+    <h3>Výsledky 6. kola</h3>
+    <p class="p1">
+      Výsledky zápasov a priebežné tabuľky po 6. kole.
+    </p>
+    <table class="table table-vertical table-noborder table-compact">
+      <tbody>
+      <tr>
+        <th>Dátum konania</th>
+        <td>22.4. 2018</td>
+      </tr>
+      <tr>
+        <th>Miesto konania</th>
+        <td>Nové Mesto nad Váhom</td>
+      </tr>
+      <tr>
+        <th>Organizátor</th>
+        <td>Cerberos Gym</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-md-4 col-lg-4">
+    <div class="card">
+      <div class="card-block">
+        <div class="card-text">
+          <h4>Na stiahnutie</h4>
+          <p class="p1"></p>
+          <div class="row">
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                <a href="../../../assets/documents/league/season-01/vysledky-0106-20180422-ring1v1.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                <a href="../../../assets/documents/league/season-01/tabulky-0106v1.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                Ring 1
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                Tabuľky
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-8 col-lg-8">
+    <h3>Výsledky 5. kola</h3>
+    <p class="p1">
+      Výsledky zápasov a priebežné tabuľky po 5. kole.
+    </p>
+    <table class="table table-vertical table-noborder table-compact">
+      <tbody>
+      <tr>
+        <th>Dátum konania</th>
+        <td>3.3. 2018</td>
+      </tr>
+      <tr>
+        <th>Miesto konania</th>
+        <td>Žilina</td>
+      </tr>
+      <tr>
+        <th>Organizátor</th>
+        <td>Diamond Gym</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-md-4 col-lg-4">
+    <div class="card">
+      <div class="card-block">
+        <div class="card-text">
+          <h4>Na stiahnutie</h4>
+          <p class="p1"></p>
+          <div class="row">
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                <a href="../../../assets/documents/league/season-01/vysledky-0105-20180303-ring1v1.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                <a href="../../../assets/documents/league/season-01/tabulky-0105v1.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                Ring 1
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                Tabuľky
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-8 col-lg-8">
+    <h3>Výsledky 4. kola</h3>
+    <p class="p1">
+      Výsledky zápasov a priebežné tabuľky po 4. kole.
+    </p>
+    <table class="table table-vertical table-noborder table-compact">
+      <tbody>
+      <tr>
+        <th>Dátum konania</th>
+        <td>3.2. 2018</td>
+      </tr>
+      <tr>
+        <th>Miesto konania</th>
+        <td>Banská Bystrica</td>
+      </tr>
+      <tr>
+        <th>Organizátor</th>
+        <td>Dracula Gym</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-md-4 col-lg-4">
+    <div class="card">
+      <div class="card-block">
+        <div class="card-text">
+          <h4>Na stiahnutie</h4>
+          <p class="p1"></p>
+          <div class="row">
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                <a href="../../../assets/documents/league/season-01/vysledky-0104-20180203-ring1v1.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                <a href="../../../assets/documents/league/season-01/vysledky-0104-20180203-ring2v1.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                <a href="../../../assets/documents/league/season-01/tabulky-0104v2.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                Ring 1
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                Ring 2
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <div class="row flex-items-md-around flex-items-md-middle">
+                Tabuľky
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-8 col-lg-8">
     <h3>Výsledky 3. kola</h3>
     <p class="p1">
       Výsledky zápasov a priebežné tabuľky po 3. kole.
@@ -40,7 +242,7 @@
             </div>
             <div class="col-md-4 col-lg-4">
               <div class="row flex-items-md-around flex-items-md-middle">
-                <a href="../../../assets/documents/league/season-01/tabulky-0103v1.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
+                <a href="../../../assets/documents/league/season-01/tabulky-0103v2.pdf" target="_blank"><img src="../../../assets/images/pdf-icon.png" /></a>
               </div>
             </div>
           </div>
